--- a/Server/WCFServer/LocationWCF/App.config
+++ b/Server/WCFServer/LocationWCF/App.config
@@ -23,8 +23,8 @@
     <add key="LocationPackageURL" value="http://172.16.100.26/Exe/LocationSystem.exe" />
     <!--基础平台对接(WebApi)的IP 测试用ipms-demo.datacase.io，正式用172.16.100.22，本地模拟用 simulate -->
     <add key="DatacaseWebApiUrl" value="simulate" />
-    <!--获取Sis数据时由于url有长度限制，限制一次发送的Tag的数量-->
-    <add key="SisTagPackageCount" value="10" />
+    <!--url的最大长度限制，获取sis数据是参数是放在url里面的，要分批发送-->
+    <add key="UrlMaxLength" value="10" />
 
     <!--NSQ配置信息-->
     <add key="NsqLookupdUrl" value="172.16.100.22:4161" />
@@ -65,10 +65,13 @@
 
     <add key="LocationCard" value="300" />
     <add key="ClientSettingsProvider.ServiceUri" value="" />
+    <add key="CardRoleId" value="3" />
+
+    <!--WCF线程数设置-->
     <add key="MaxConcurrentCalls" value="4000" />
     <add key="MaxConcurrentSessions" value="4000" />
     <add key="MaxConcurrentInstances" value="4000" />
-    <add key="CardRoleId" value="3" />
+
     <!--极视角告警监听端口-->
     <add key="ExtremeVisionListenerPort" value="8736" />
     
