--- a/LocationDaemon/App.config
+++ b/LocationDaemon/App.config
@@ -4,13 +4,34 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
   <appSettings>
-    <add key="path" value="D:\SoftwareProjects\GitHub\LocationSystem\Server\WCFServer\LocationWCF\bin\Debug2\LocationServer.exe"/>
+    <!-- 目标程序，在同一个文件夹则不用全路径，在不同文件夹需要全路径 -->
+    <add key="path" value="LocationServer.exe"/>
     <add key="processName" value="LocationServer"/>
     <add key="WerFaultProcess" value="WerFault"/>
     <add key="interval" value="5"/>
     <add key="enableDeleteLog" value="True"/>
-    <add key="logDir" value="D:\SoftwareProjects\GitHub\LocationSystem\Server\WCFServer\LocationWCF\bin\Debug2\Logs"/>
+
+    <!-- 日志文件夹，在同一个文件夹则不用全路径，在不同文件夹需要全路径 -->
+    <add key="logDir" value="Logs"/>
     <add key="logDeleteCheckHour" value="12"/>
     <add key="logKeepDay" value="30"/>
+
+    <!-- （定时）重启目标程序 -->
+    <add key="EnableRestart" value="True"/>
+    <!-- 重启模式 1:在每天固定时间重启 2:间隔多久重启一次 3:webapi心跳包方式 -->
+    <add key="RestartMode" value="1"/>
+    <!-- 重启时间 每天早上4点-->
+    <add key="RestartTime" value="04:00"/>
+    <!-- 重启间隔 间隔1440分钟(24小时)重启-->
+    <add key="RestartInterval" value="1440"/>
+
+    <!-- webapi心跳包方式 重启 -->
+    <add key="EchoRestart" value="True"/>
+    <!-- 显示心跳包日志 -->
+    <add key="EchoLog" value="True"/>
+    <!-- 心跳包间隔时间(s) 一段时间-->
+    <add key="EchoInterval" value="10"/>
+    <!-- webapi心跳包方式 的地址-->
+    <add key="EchoUrl" value="http://localhost:8733/api/users/HeartBeat/1"/>
   </appSettings>
 </configuration>
