--- a/Server/WCFServer/LocationWCF/App.config
+++ b/Server/WCFServer/LocationWCF/App.config
@@ -12,17 +12,17 @@
     <!--客户端版本号 每次客户端打包增加-->
     <add key="ClientVersionCode" value="1.0.40" />
     <!--服务端版本号 每次客户端增加服务端也修改 -->
-    <add key="ServerVersionCode" value="1.0.10" />
+    <add key="ServerVersionCode" value="1.0.14" />
     <!--自动启动服务 0:启动 1:不启动-->
     <add key="AutoStartServer" value="0" />
     <!--自动连接定位引擎-->
     <add key="AutoConnectEngine" value="True" />
-    <!--本地IP(连接定位引擎)-->
-    <add key="Ip" value="172.16.100.26" />
+    <!--本地IP(连接定位引擎) 宝信：192.168.1.100-->
+    <add key="Ip" value="192.168.1.100" />
     <!--定位引擎IP(连接定位引擎)-->
-    <add key="EngineIp" value="172.16.100.25" />
-    <!--三维更新安装包路径 172.16.100.26-->
-    <add key="LocationPackageURL" value="http://172.16.100.26/Exe/LocationSystem.exe" />
+    <add key="EngineIp" value="192.168.1.100" />
+    <!--三维更新安装包路径-->
+    <add key="LocationPackageURL" value="http://192.168.108.109/Exe/LocationSystem.exe" />
     <!--基础平台对接(WebApi)的IP 测试用ipms-demo.datacase.io，正式用172.16.100.22，本地模拟用 simulate -->
     <add key="DatacaseWebApiUrl" value="172.16.100.22" />
     <!--url的最大长度限制，获取sis数据是参数是放在url里面的，要分批发送-->
@@ -32,25 +32,22 @@
     <add key="NsqLookupdUrl" value="172.16.100.22:4161" />
     <add key="NsqLookupdTopic" value="honeywell" />
     <add key="NsqLookupdChannel" value="channel-name" />
-
-    <!--获取移动巡检数据（进行对接）-->
-    <add key="EnableInspectionTrack" value="False" />
+    
     <!--数据初始化方式 -1:不初始化,0:EF,1:Sql-->
     <add key="DataInitMode" value="-1" />
     <!--数据库来源 0:SqlServer 1:SQLite 2:MySql-->
     <add key="DbSourceType" value="MySql" />
     <!--显示数据库语句 0:不显示 1:显示-->
     <add key="ShowSqlLog" value="0" />
-
-    <!--厂区名称（根结点名称）四会热电厂/宝刚园区 -->
-    <add key="ParkName" value="四会热电厂" />
-    <!--初始化拓扑结点时位置偏移，宝刚项目时和品铂直接的原点差距,四会 0,0, 宝刚 (+86.4517,-3.048) -->
-    <add key="InitTopoOffset" value="0,0" />
-    <!--初始化拓扑结点时坐标单位切换，我们里面用m，要换算成厘米的话*100，四会 1，宝刚 100，改动太多了，先不动 -->
+    <!--厂区名称（根结点名称）四会热电厂/宝钢园区 -->
+    <add key="ParkName" value="宝钢园区" />
+    <!--初始化拓扑结点时位置偏移，宝钢项目时和品铂直接的原点差距,四会 0,0, 宝钢 (+86.4517,-3.048) -->
+    <add key="InitTopoOffset" value="86.4517,-3.048" />
+    <!--初始化拓扑结点时坐标单位切换，我们里面用m，要换算成厘米的话*100，四会 1，宝钢 100，改动太多了，先不动 -->
     <add key="InitTopoPower" value="1" />
 
     <!--坐标系偏移量-->
-    <add key="LocationOffset" value="2059,1565" />
+    <add key="LocationOffset" value="0,0" />
     <add key="WritePositionLog" value="False" />
     <!--WCFHost 对于WebApi和WCF可以直接用localhost ，但是对于HttpListener要用具体的本机IP-->
     <add key="Host" value="localhost" />
@@ -76,7 +73,7 @@
     <add key="MaxConcurrentSessions" value="4000" />
     <add key="MaxConcurrentInstances" value="4000" />
 
-    <!--极视角告警监听端口-->
+    <!--极视角告警监听端口 192.168.1.100  8736-->    
     <add key="ExtremeVisionListenerPort" value="8736" />
     <add key="ExtremeVisionListenerIP" value="192.168.1.100" />
 
@@ -87,6 +84,28 @@
     <add key="NVRPort" value="3000" />
     <add key="NVRUser" value="Admin" />
     <add key="NVRPass" value="1111add" />
+
+    <!--是否启动守护进程-->
+    <add key="StartDaemon" value="True" />
+    <!--只能有一个守护进程程序-->
+    <add key="OnlyOneDaemon" value="True" />
+    <!--守护进程程序名-->
+    <add key="DaemonProcess" value="LocationDaemon" />
+    <!--守护进程程序路径，可以是全路径-->
+    <add key="DaemonPath" value="LocationDaemon.exe" />
+
+    <!--部分功能的启用和关闭-->
+    <!--设备告警对接服务 WebNSQLib(用于四会电厂)-->
+    <add key="EnableAlarmRecieve" value="False" />
+    <!--获取移动巡检数据（用于四会电厂）-->
+    <add key="EnableInspectionTrack" value="False" />
+    <!--极视角火警和安全帽对接（用于宝信）-->
+    <add key="EnableVisionListener" value="True"/>
+    <!--视频对接告警的图片存放方式 1:存在数据库Picture表中 2.已图片方式存在服务端文件夹中-->
+    <add key="CameraAlarmPicSaveMode" value="1"/>
+
+    <!--定位历史数据缓存到内存中-->
+    <add key="EnableHistoryBuffer" value="False" />
 
   </appSettings>
   <connectionStrings>
