--- a/Server/WCFServer/LocationWCF/App.config
+++ b/Server/WCFServer/LocationWCF/App.config
@@ -86,7 +86,7 @@
     <add key="NVRPass" value="1111add" />
 
     <!--是否启动守护进程-->
-    <add key="StartDaemon" value="True" />
+    <add key="StartDaemon" value="False" />
     <!--只能有一个守护进程程序-->
     <add key="OnlyOneDaemon" value="True" />
     <!--守护进程程序名-->
@@ -105,7 +105,7 @@
     <add key="CameraAlarmPicSaveMode" value="1"/>
 
     <!--定位历史数据缓存到内存中-->
-    <add key="EnableHistoryBuffer" value="False" />
+    <add key="EnableHistoryBuffer" value="True" />
 
   </appSettings>
   <connectionStrings>
