删除重复数据

--- a/Server/WCFServer/LocationWCF/App.config
+++ b/Server/WCFServer/LocationWCF/App.config
@@ -18,9 +18,9 @@
     <!--自动连接定位引擎-->
     <add key="AutoConnectEngine" value="True" />
     <!--本地IP(连接定位引擎) 宝信：192.168.1.100-->
-    <add key="Ip" value="192.168.1.100" />
+    <add key="Ip" value="127.0.0.1" />
     <!--定位引擎IP(连接定位引擎)-->
-    <add key="EngineIp" value="192.168.1.100" />
+    <add key="EngineIp" value="127.0.0.1" />
     <!--三维更新安装包路径-->
     <add key="LocationPackageURL" value="http://192.168.108.109/Exe/LocationSystem.exe" />
     <!--基础平台对接(WebApi)的IP 测试用ipms-demo.datacase.io，正式用172.16.100.22，本地模拟用 simulate -->
@@ -106,7 +106,8 @@
 
     <!--定位历史数据缓存到内存中-->
     <add key="EnableHistoryBuffer" value="True" />
-
+    <!--线程插入定位数据到历史表中的时间间隔 (s)-->
+    <add key="AddHisPositionInterval" value="10" />
   </appSettings>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-WebLocation-20180528021530.mdf;Initial Catalog=aspnet-WebLocation-20180528021530;Integrated Security=True" providerName="System.Data.SqlClient" />
