--- a/Server/WCFServer/LocationWCF/App.config
+++ b/Server/WCFServer/LocationWCF/App.config
@@ -12,15 +12,15 @@
     <!--客户端版本号 每次客户端打包增加-->
     <add key="ClientVersionCode" value="1.0.40" />
     <!--服务端版本号 每次客户端增加服务端也修改 -->
-    <add key="ServerVersionCode" value="1.0.15" />
+    <add key="ServerVersionCode" value="1.0.16" />
     <!--自动启动服务 0:启动 1:不启动-->
     <add key="AutoStartServer" value="0" />
     <!--自动连接定位引擎-->
     <add key="AutoConnectEngine" value="True" />
     <!--本地IP(连接定位引擎) 宝信：192.168.1.100-->
-    <add key="Ip" value="127.0.0.1" />
+    <add key="Ip" value="192.168.1.100" />
     <!--定位引擎IP(连接定位引擎)-->
-    <add key="EngineIp" value="127.0.0.1" />
+    <add key="EngineIp" value="192.168.1.100" />
     <!--三维更新安装包路径-->
     <add key="LocationPackageURL" value="http://192.168.108.109/Exe/LocationSystem.exe" />
     <!--基础平台对接(WebApi)的IP 测试用ipms-demo.datacase.io，正式用172.16.100.22，本地模拟用 simulate -->
@@ -75,7 +75,7 @@
 
     <!--极视角告警监听端口 192.168.1.100  8736-->    
     <add key="ExtremeVisionListenerPort" value="8736" />
-    <add key="ExtremeVisionListenerIP" value="192.168.1.100" />
+    <add key="ExtremeVisionListenerIP" value="127.0.0.1" />
 
     <!--NVSPlayer-->
     <add key="EnabelNVS" value="False" />
@@ -86,7 +86,7 @@
     <add key="NVRPass" value="1111add" />
 
     <!--是否启动守护进程-->
-    <add key="StartDaemon" value="False" />
+    <add key="StartDaemon" value="True" />
     <!--只能有一个守护进程程序-->
     <add key="OnlyOneDaemon" value="True" />
     <!--守护进程程序名-->
