守护进程优化，服务端优化

--- a/LocationDaemon/App.config
+++ b/LocationDaemon/App.config
@@ -8,7 +8,7 @@
     <add key="path" value="LocationServer.exe"/>
     <add key="processName" value="LocationServer"/>
     <add key="WerFaultProcess" value="WerFault"/>
-    <add key="interval" value="20"/>
+    <add key="interval" value="5"/>
     <add key="enableDeleteLog" value="True"/>
 
     <!-- 日志文件夹，在同一个文件夹则不用全路径，在不同文件夹需要全路径 -->
@@ -33,5 +33,9 @@
     <add key="EchoInterval" value="10"/>
     <!-- webapi心跳包方式 的地址-->
     <add key="EchoUrl" value="http://localhost:8733/api/users/HeartBeat/1"/>
+
+    <!-- 最大内存限制(MB)，超过这个内存大小，就重启。0:没有限制 -->
+    <add key="MaxMemorySize" value="8192"/>
+
   </appSettings>
 </configuration>
