--- a/Server/WCFServer/LocationWCF/App.config
+++ b/Server/WCFServer/LocationWCF/App.config
@@ -12,7 +12,7 @@
     <!--客户端版本号 每次客户端打包增加-->
     <add key="ClientVersionCode" value="1.0.40" />
     <!--服务端版本号 每次客户端增加服务端也修改 -->
-    <add key="ServerVersionCode" value="1.0.16" />
+    <add key="ServerVersionCode" value="1.0.17" />
     <!--自动启动服务 0:启动 1:不启动-->
     <add key="AutoStartServer" value="0" />
     <!--自动连接定位引擎-->
@@ -93,6 +93,8 @@
     <add key="DaemonProcess" value="LocationDaemon" />
     <!--守护进程程序路径，可以是全路径-->
     <add key="DaemonPath" value="LocationDaemon.exe" />
+    <!--自动注册开机自启动 True的话，每次启动都会注册一下，因为有多个版本服务端存在，不然要每次都手动操作一下-->
+    <add key="RegisterDaemonAutoRun" value="True" />
 
     <!--部分功能的启用和关闭-->
     <!--设备告警对接服务 WebNSQLib(用于四会电厂)-->
@@ -101,13 +103,15 @@
     <add key="EnableInspectionTrack" value="False" />
     <!--极视角火警和安全帽对接（用于宝信）-->
     <add key="EnableVisionListener" value="True"/>
-    <!--视频对接告警的图片存放方式 1:存在数据库Picture表中 2.已图片方式存在服务端文件夹中-->
-    <add key="CameraAlarmPicSaveMode" value="1"/>
+
+    <!--视频对接告警的图片存放方式 0:存在数据库Picture表中 1.已图片方式存在服务端文件夹中-->
+    <add key="CameraAlarmPicSaveMode" value="0"/>
 
     <!--定位历史数据缓存到内存中-->
     <add key="EnableHistoryBuffer" value="True" />
     <!--线程插入定位数据到历史表中的时间间隔 (s)-->
     <add key="AddHisPositionInterval" value="10" />
+
   </appSettings>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-WebLocation-20180528021530.mdf;Initial Catalog=aspnet-WebLocation-20180528021530;Integrated Security=True" providerName="System.Data.SqlClient" />
