告警图片从数据提取出去保存到文件中

--- a/Model/DbModel/DbModel.csproj
+++ b/Model/DbModel/DbModel.csproj
@@ -168,6 +168,7 @@
     <Compile Include="Tools\ListExtension.cs" />
     <Compile Include="Tools\ThreadTool.cs" />
     <Compile Include="Tools\TreeHelper.cs" />
+    <Compile Include="Tools\Worker.cs" />
     <Compile Include="Tools\XmlSerializeHelper.cs" />
   </ItemGroup>
   <ItemGroup>
