--- a/Server/WCFServer/LocationWCF/App.config
+++ b/Server/WCFServer/LocationWCF/App.config
@@ -86,7 +86,7 @@
     <add key="NVRPass" value="1111add" />
 
     <!--是否启动守护进程-->
-    <add key="StartDaemon" value="True" />
+    <add key="StartDaemon" value="False" />
     <!--只能有一个守护进程程序-->
     <add key="OnlyOneDaemon" value="True" />
     <!--守护进程程序名-->
@@ -106,7 +106,12 @@
 
     <!--视频对接告警的图片存放方式 0:存在数据库Picture表中 1.已图片方式存在服务端文件夹中-->
     <add key="CameraAlarmPicSaveMode" value="0"/>
-
+    <!--视频对接告警的图片保存为止 
+    考虑到多个服务端版本同时存在，文件夹名称可能修改，该目录基于服务端程序所在的分区
+    程序在D盘，CameraAlarmPic，想到于是 D:\CameraAlarmPic。LocationSystem\CameraAlarmPic相当于是D:\LocationSystem\CameraAlarmPic
+    -->
+    <add key="CameraAlarmPicSaveDir" value="LocationSystem\CameraAlarmPic"/>
+    
     <!--定位历史数据缓存到内存中-->
     <add key="EnableHistoryBuffer" value="True" />
     <!--线程插入定位数据到历史表中的时间间隔 (s)-->
