视频告警管理界面

--- a/Server/WCFServer/LocationWCF/App.config
+++ b/Server/WCFServer/LocationWCF/App.config
@@ -10,9 +10,9 @@
   </startup>
   <appSettings>
     <!--客户端版本号 每次客户端打包增加-->
-    <add key="ClientVersionCode" value="1.0.40" />
+    <add key="ClientVersionCode" value="1.0.42" />
     <!--服务端版本号 每次客户端增加服务端也修改 -->
-    <add key="ServerVersionCode" value="1.0.17" />
+    <add key="ServerVersionCode" value="1.0.18" />
     <!--自动启动服务 0:启动 1:不启动-->
     <add key="AutoStartServer" value="0" />
     <!--自动连接定位引擎-->
@@ -86,7 +86,7 @@
     <add key="NVRPass" value="1111add" />
 
     <!--是否启动守护进程-->
-    <add key="StartDaemon" value="False" />
+    <add key="StartDaemon" value="True" />
     <!--只能有一个守护进程程序-->
     <add key="OnlyOneDaemon" value="True" />
     <!--守护进程程序名-->
