--- a/LocationDaemon/App.config
+++ b/LocationDaemon/App.config
@@ -4,6 +4,9 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
   <appSettings>
+    <!-- 版本号 -->
+    <add key="version" value="1.0.1"/>
+
     <!-- 目标程序，在同一个文件夹则不用全路径，在不同文件夹需要全路径 -->
     <add key="path" value="LocationServer.exe"/>
     <add key="processName" value="LocationServer"/>
