--- a/Server/WCFServer/LocationWCF/App.config
+++ b/Server/WCFServer/LocationWCF/App.config
@@ -10,19 +10,19 @@
   </startup>
   <appSettings>
     <!--客户端版本号 每次客户端打包增加-->
-    <add key="ClientVersionCode" value="1.0.42" />
+    <add key="ClientVersionCode" value="1.0.44" />
     <!--服务端版本号 每次客户端增加服务端也修改 -->
-    <add key="ServerVersionCode" value="1.0.19" />
+    <add key="ServerVersionCode" value="1.0.20" />
     <!--自动启动服务 0:启动 1:不启动-->
     <add key="AutoStartServer" value="0" />
     <!--自动连接定位引擎-->
     <add key="AutoConnectEngine" value="True" />
-    <!--本地IP(连接定位引擎) 宝信：192.168.1.100-->
-    <add key="Ip" value="192.168.1.100" />
+    <!--本地IP(连接定位引擎)-->
+    <add key="Ip" value="172.16.100.26" />
     <!--定位引擎IP(连接定位引擎)-->
-    <add key="EngineIp" value="192.168.1.100" />
-    <!--三维更新安装包路径-->
-    <add key="LocationPackageURL" value="http://192.168.108.109/Exe/LocationSystem.exe" />
+    <add key="EngineIp" value="172.16.100.25" />
+    <!--三维更新安装包路径 172.16.100.26-->
+    <add key="LocationPackageURL" value="http://172.16.100.26/Exe/LocationSystem.exe" />
     <!--基础平台对接(WebApi)的IP 测试用ipms-demo.datacase.io，正式用172.16.100.22，本地模拟用 simulate -->
     <add key="DatacaseWebApiUrl" value="172.16.100.22" />
     <!--url的最大长度限制，获取sis数据是参数是放在url里面的，要分批发送-->
@@ -40,14 +40,14 @@
     <!--显示数据库语句 0:不显示 1:显示-->
     <add key="ShowSqlLog" value="0" />
     <!--厂区名称（根结点名称）四会热电厂/宝钢园区 -->
-    <add key="ParkName" value="宝钢园区" />
+    <add key="ParkName" value="四会热电厂" />
     <!--初始化拓扑结点时位置偏移，宝钢项目时和品铂直接的原点差距,四会 0,0, 宝钢 (+86.4517,-3.048) -->
-    <add key="InitTopoOffset" value="86.4517,-3.048" />
+    <add key="InitTopoOffset" value="0,0" />
     <!--初始化拓扑结点时坐标单位切换，我们里面用m，要换算成厘米的话*100，四会 1，宝钢 100，改动太多了，先不动 -->
     <add key="InitTopoPower" value="1" />
 
     <!--坐标系偏移量-->
-    <add key="LocationOffset" value="0,0" />
+    <add key="LocationOffset" value="2059,1565" />
     <add key="WritePositionLog" value="False" />
     <!--WCFHost 对于WebApi和WCF可以直接用localhost ，但是对于HttpListener要用具体的本机IP-->
     <add key="Host" value="localhost" />
@@ -58,7 +58,7 @@
     <!--人员运动状态发生变化的时间间隔(s),5s以上则静止-->
     <add key="PositionMoveStateWaitTime" value="5" />
     <!--人员运动状态发生变化的时间间隔(s),60s以上则离线-->
-    <add key="PositionMoveStateOfflineTime" value="60" />
+    <add key="PositionMoveStateOfflineTime" value="86400" />
     <!--定位卡低电告警标志位-->
     <add key="LowPowerFlag" value="370" />
     <!--显示未在定位区域的位置点-->
@@ -74,10 +74,10 @@
     <add key="MaxConcurrentInstances" value="4000" />
 
     <!--极视角火警和安全帽对接（用于宝信）-->
-    <add key="EnableVisionListener" value="True"/>
+    <add key="EnableVisionListener" value="False"/>
     <!--极视角告警监听端口 192.168.1.100  8736-->    
     <add key="ExtremeVisionListenerPort" value="8736" />
-    <add key="ExtremeVisionListenerIP" value="127.0.0.1" />
+    <add key="ExtremeVisionListenerIP" value="192.168.1.100" />
     <!--视频对接告警的图片存放方式 0:存在数据库Picture表中 1.已图片方式存在服务端文件夹中-->
     <add key="CameraAlarmPicSaveMode" value="1"/>
     <!--视频对接告警的图片保存为止 
@@ -111,14 +111,22 @@
 
     <!--部分功能的启用和关闭-->
     <!--设备告警对接服务 WebNSQLib(用于四会电厂)-->
-    <add key="EnableAlarmRecieve" value="False" />
+    <add key="EnableAlarmRecieve" value="True" />
     <!--获取移动巡检数据（用于四会电厂）-->
-    <add key="EnableInspectionTrack" value="False" />
+    <add key="EnableInspectionTrack" value="True" />
     
     <!--定位历史数据缓存到内存中-->
     <add key="EnableHistoryBuffer" value="True" />
     <!--线程插入定位数据到历史表中的时间间隔 (s)-->
     <add key="AddHisPositionInterval" value="10" />
+    
+    <!--设备告警保存天数-->
+    <add key="AlarmRemoveDays" value="30"/>
+
+    <!--记录定位信息-->
+    <add key="LogPostionRawInfo" value="True"/>
+    <!--记录Web通信信息-->
+    <add key="LogCommunictionInfo" value="True"/>
 
   </appSettings>
   <connectionStrings>
