--- a/Server/WCFServer/LocationWCF/AppConfig（四会）/App.config
+++ b/Server/WCFServer/LocationWCF/AppConfig（四会）/App.config
@@ -10,19 +10,19 @@
   </startup>
   <appSettings>
     <!--客户端版本号 每次客户端打包增加-->
-    <add key="ClientVersionCode" value="1.0.40" />
+    <add key="ClientVersionCode" value="1.0.44" />
     <!--服务端版本号 每次客户端增加服务端也修改 -->
-    <add key="ServerVersionCode" value="1.0.13" />
+    <add key="ServerVersionCode" value="1.0.20" />
     <!--自动启动服务 0:启动 1:不启动-->
     <add key="AutoStartServer" value="0" />
     <!--自动连接定位引擎-->
     <add key="AutoConnectEngine" value="True" />
-    <!--本地IP(连接定位引擎) 宝信：192.168.1.100-->
-    <add key="Ip" value="192.168.1.100" />
+    <!--本地IP(连接定位引擎)-->
+    <add key="Ip" value="172.16.100.26" />
     <!--定位引擎IP(连接定位引擎)-->
-    <add key="EngineIp" value="192.168.1.100" />
-    <!--三维更新安装包路径-->
-    <add key="LocationPackageURL" value="http://192.168.108.109/Exe/LocationSystem.exe" />
+    <add key="EngineIp" value="172.16.100.25" />
+    <!--三维更新安装包路径 172.16.100.26-->
+    <add key="LocationPackageURL" value="http://172.16.100.26/Exe/LocationSystem.exe" />
     <!--基础平台对接(WebApi)的IP 测试用ipms-demo.datacase.io，正式用172.16.100.22，本地模拟用 simulate -->
     <add key="DatacaseWebApiUrl" value="172.16.100.22" />
     <!--url的最大长度限制，获取sis数据是参数是放在url里面的，要分批发送-->
@@ -32,22 +32,23 @@
     <add key="NsqLookupdUrl" value="172.16.100.22:4161" />
     <add key="NsqLookupdTopic" value="honeywell" />
     <add key="NsqLookupdChannel" value="channel-name" />
-    
+
     <!--数据初始化方式 -1:不初始化,0:EF,1:Sql-->
     <add key="DataInitMode" value="-1" />
     <!--数据库来源 0:SqlServer 1:SQLite 2:MySql-->
     <add key="DbSourceType" value="MySql" />
     <!--显示数据库语句 0:不显示 1:显示-->
     <add key="ShowSqlLog" value="0" />
+
     <!--厂区名称（根结点名称）四会热电厂/宝钢园区 -->
-    <add key="ParkName" value="宝钢园区" />
+    <add key="ParkName" value="四会热电厂" />
     <!--初始化拓扑结点时位置偏移，宝钢项目时和品铂直接的原点差距,四会 0,0, 宝钢 (+86.4517,-3.048) -->
-    <add key="InitTopoOffset" value="86.4517,-3.048" />
+    <add key="InitTopoOffset" value="0,0" />
     <!--初始化拓扑结点时坐标单位切换，我们里面用m，要换算成厘米的话*100，四会 1，宝钢 100，改动太多了，先不动 -->
     <add key="InitTopoPower" value="1" />
 
     <!--坐标系偏移量-->
-    <add key="LocationOffset" value="0,0" />
+    <add key="LocationOffset" value="2059,1565" />
     <add key="WritePositionLog" value="False" />
     <!--WCFHost 对于WebApi和WCF可以直接用localhost ，但是对于HttpListener要用具体的本机IP-->
     <add key="Host" value="localhost" />
@@ -58,7 +59,7 @@
     <!--人员运动状态发生变化的时间间隔(s),5s以上则静止-->
     <add key="PositionMoveStateWaitTime" value="5" />
     <!--人员运动状态发生变化的时间间隔(s),60s以上则离线-->
-    <add key="PositionMoveStateOfflineTime" value="60" />
+    <add key="PositionMoveStateOfflineTime" value="86400" />
     <!--定位卡低电告警标志位-->
     <add key="LowPowerFlag" value="370" />
     <!--显示未在定位区域的位置点-->
@@ -73,12 +74,25 @@
     <add key="MaxConcurrentSessions" value="4000" />
     <add key="MaxConcurrentInstances" value="4000" />
 
+    <!--极视角火警和安全帽对接（用于宝信）-->
+    <add key="EnableVisionListener" value="False"/>
     <!--极视角告警监听端口 192.168.1.100  8736-->    
     <add key="ExtremeVisionListenerPort" value="8736" />
     <add key="ExtremeVisionListenerIP" value="192.168.1.100" />
+    <!--视频对接告警的图片存放方式 0:存在数据库Picture表中 1.已图片方式存在服务端文件夹中-->
+    <add key="CameraAlarmPicSaveMode" value="1"/>
+    <!--视频对接告警的图片保存为止 
+    考虑到多个服务端版本同时存在，文件夹名称可能修改，该目录基于服务端程序所在的分区
+    程序在D盘，CameraAlarmPic，想到于是 D:\CameraAlarmPic。LocationSystem\CameraAlarmPic相当于是D:\LocationSystem\CameraAlarmPic
+    -->
+    <add key="CameraAlarmPicSaveDir" value="LocationSystem\CameraAlarmPic"/>
+    <!--视频告警保存时间 (天) 0:无限制,不启动线程-->
+    <add key="CameraAlarmKeepDay" value="120"/>
+    <!--删除告警时是否保存图片 True:保存图片，恢复时有用 False:彻底删除图片-->
+    <add key="DeleteAlarmKeepPictureFile" value="True"/>
 
     <!--NVSPlayer-->
-    <add key="EnabelNVS" value="True" />
+    <add key="EnabelNVS" value="False" />
     <add key="RTMP_Host" value="192.168.108.109" />
     <add key="NVRIP" value="192.168.108.107" />
     <add key="NVRPort" value="3000" />
@@ -98,20 +112,16 @@
 
     <!--部分功能的启用和关闭-->
     <!--设备告警对接服务 WebNSQLib(用于四会电厂)-->
-    <add key="EnableAlarmRecieve" value="False" />
+    <add key="EnableAlarmRecieve" value="True" />
     <!--获取移动巡检数据（用于四会电厂）-->
-    <add key="EnableInspectionTrack" value="False" />
-    <!--极视角火警和安全帽对接（用于宝信）-->
-    <add key="EnableVisionListener" value="True"/>
-
-    <!--视频对接告警的图片存放方式 1:存在数据库Picture表中 2.已图片方式存在服务端文件夹中-->
-    <add key="CameraAlarmPicSaveMode" value="1"/>
+    <add key="EnableInspectionTrack" value="True" />
 
     <!--定位历史数据缓存到内存中-->
     <add key="EnableHistoryBuffer" value="True" />
     <!--线程插入定位数据到历史表中的时间间隔 (s)-->
     <add key="AddHisPositionInterval" value="10" />
-
+    <!--设备告警保存天数-->
+    <add key="AlarmRemoveDays" value="30"/>
   </appSettings>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-WebLocation-20180528021530.mdf;Initial Catalog=aspnet-WebLocation-20180528021530;Integrated Security=True" providerName="System.Data.SqlClient" />
