服务端修改

--- a/Server/WCFServer/LocationWCF/App.config
+++ b/Server/WCFServer/LocationWCF/App.config
@@ -121,7 +121,7 @@
     <add key="AddHisPositionInterval" value="10" />
     
     <!--设备告警保存天数-->
-    <add key="AlarmRemoveDays" value="30"/>
+    <add key="DevAlarmKeepDays" value="90"/>
 
     <!--记录定位信息-->
     <add key="LogPostionRawInfo" value="True"/>
