--- a/Service/LocationWCF/Location.Service.csproj
+++ b/Service/LocationWCF/Location.Service.csproj
@@ -145,6 +145,7 @@
     <Compile Include="Locations\LocationService_Tag.cs" />
     <Compile Include="Locations\NVSPlayerService\INVSPlayer.cs" />
     <Compile Include="Locations\Services\AchorService.cs" />
+    <Compile Include="Locations\Services\AlarmService.cs" />
     <Compile Include="Locations\Services\BaseDataService.cs" />
     <Compile Include="Locations\Services\CameraAlarmService.cs" />
     <Compile Include="Locations\Services\DevService.cs" />
