--- a/Server/WCFServer/LocationWCF/App.config
+++ b/Server/WCFServer/LocationWCF/App.config
@@ -10,9 +10,9 @@
   </startup>
   <appSettings>
     <!--客户端版本号 每次客户端打包增加-->
-    <add key="ClientVersionCode" value="1.0.44" />
+    <add key="ClientVersionCode" value="1.0.45" />
     <!--服务端版本号 每次客户端增加服务端也修改 -->
-    <add key="ServerVersionCode" value="1.0.20" />
+    <add key="ServerVersionCode" value="1.0.21" />
     <!--自动启动服务 0:启动 1:不启动-->
     <add key="AutoStartServer" value="0" />
     <!--自动连接定位引擎-->
@@ -56,9 +56,9 @@
     <add key="User" value="Admin" />
     <add key="Password" value="Admin@123456" />
     <!--人员运动状态发生变化的时间间隔(s),5s以上则静止-->
-    <add key="PositionMoveStateWaitTime" value="5" />
+    <add key="PositionMoveStateWaitTime" value="20" />
     <!--人员运动状态发生变化的时间间隔(s),60s以上则离线-->
-    <add key="PositionMoveStateOfflineTime" value="86400" />
+    <add key="PositionMoveStateOfflineTime" value="3600" />
     <!--定位卡低电告警标志位-->
     <add key="LowPowerFlag" value="370" />
     <!--显示未在定位区域的位置点-->
@@ -99,7 +99,7 @@
     <add key="NVRPass" value="1111add" />
 
     <!--是否启动守护进程-->
-    <add key="StartDaemon" value="True" />
+    <add key="StartDaemon" value="False" />
     <!--只能有一个守护进程程序-->
     <add key="OnlyOneDaemon" value="True" />
     <!--守护进程程序名-->
@@ -119,6 +119,8 @@
     <add key="EnableHistoryBuffer" value="True" />
     <!--线程插入定位数据到历史表中的时间间隔 (s)-->
     <add key="AddHisPositionInterval" value="10" />
+    <!--定位引擎发送心跳包的时间间隔 (ms)-->
+    <add key="PosEngineKeepAliveInterval" value="5000" />
     
     <!--设备告警保存天数-->
     <add key="DevAlarmKeepDays" value="90"/>
